@@ -48,7 +48,7 @@ class ExternalEdit {
 			$extension="wiki";
 		} elseif($this->mMode=="file") {
 			$type="Edit file";
-			$image = Image::newFromTitle( $this->mTitle );
+			$image = new Image( $this->mTitle );
 			$img_url = $image->getURL();
 			if(strpos($img_url,"://")) {
 				$url = $img_url;
