@@ -47,6 +47,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   cache object.
 * (bug 6299) Maintain parser's revision ID across recursive calls to fix
   {{REVISIONID}} when Cite extension is used
+* (bug 6622) Removed deprecated function image::newFromTitle
 
 
 == Languages updated ==
